@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.78 - Wed Dec 21 2022
+
+    * StationS: Fix geocoordinates for a variety of Dutch stations.
+      In some cases, they were off by several hundred kilometers.
+
 Travel::Status::DE::IRIS 1.77 - Mon Dec 12 2022
 
     * Handle "Betriebsstelle nicht bekannt" in routes.
